# spacecurve

./: .agents.md  .gitignore  AGENTS.md  Cargo.toml  DEV.md  README.md
crates/egui-img/: Cargo.toml
crates/egui-img/examples/: debug_viewer.rs
crates/egui-img/src/: lib.rs
crates/scurve/: Cargo.toml  README.md
crates/scurve-gui/: Cargo.toml  README.md
crates/scurve-gui/assets/: index.html
crates/scurve-gui/assets/fonts/: OFL-ORBITRON.txt
crates/scurve-gui/examples/: web_build.rs
crates/scurve-gui/src/: about.rs  lib.rs  selection.rs  snake.rs  state.rs  theme.rs  threed.rs  twod.rs  web.rs  widgets.rs
crates/scurve-gui/tests/: web_build.rs
crates/scurve/src/: cmd.rs  lib.rs  main.rs  map.rs
crates/scurve/tests/: cli_commands.rs  list_curves.rs  vis_boundary.rs
crates/spacecurve/: Cargo.toml  README.md
crates/spacecurve/benches/: ops.rs  patterns.rs
crates/spacecurve/src/: error.rs  lib.rs  ops.rs  point.rs  registry.rs  spec.rs
crates/spacecurve/src/curves/: gray.rs  hairyonion.rs  hcurve.rs  hilbert.rs  hilbert2.rs  hilbert_common.rs  hilbertn.rs  mod.rs  onion.rs  scan.rs  zorder.rs
crates/spacecurve/src/curves/onion/: l2.rs  mod.rs  rect.rs  threed.rs  twod.rs
crates/spacecurve/src/spacecurve/: mod.rs
crates/spacecurve/tests/: bijection.rs  curves.rs
scripts/: build_web.py  serve_dist.py  serve_web.py  setup_web.py
