[package]
name = "egui-img"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0"
eframe = "0.33"
egui = "0.33"
image = "0.25"
png = "0.17"

[lints]
workspace = true

[features]
default = []
# Enable eframe screenshot support for debug captures
__screenshot = ["eframe/__screenshot"]
