[package]
name = "spacecurve"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
smallvec = "1.15.1"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.7"
paste = "1.0"
proptest = "1.6"

[[bench]]
name="patterns"
harness=false

[[bench]]
name="ops"
harness=false

